// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a contract address 1`] = `
AztecAddress {
  "buffer": {
    "data": [
      23,
      195,
      238,
      164,
      135,
      48,
      185,
      140,
      254,
      39,
      188,
      222,
      45,
      253,
      188,
      51,
      122,
      169,
      25,
      177,
      98,
      66,
      168,
      55,
      139,
      51,
      150,
      43,
      225,
      210,
      221,
      52,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Fr {
  "value": 10724872372058747971865607189197215883616299259274114995580068674650484136837n,
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 14753252017424563237038015065402454919037294146339173328174383872613705551896n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Fr {
  "value": 12906610331695443491500387150847739068531523218659917858520872318692742082976n,
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
{
  "data": [
    12,
    232,
    162,
    197,
    24,
    169,
    220,
    190,
    249,
    181,
    143,
    125,
    42,
    148,
    122,
    184,
    9,
    76,
    249,
    203,
    86,
    123,
    134,
    233,
    199,
    172,
    142,
    3,
    153,
    58,
    146,
    26,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes constructor info 1`] = `
{
  "data": [
    0,
    42,
    81,
    192,
    149,
    42,
    31,
    44,
    51,
    157,
    117,
    32,
    49,
    182,
    81,
    178,
    113,
    17,
    7,
    216,
    164,
    73,
    67,
    44,
    106,
    207,
    145,
    77,
    12,
    175,
    198,
    200,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes empty function args 1`] = `
Fr {
  "value": 0n,
}
`;

exports[`abis wasm bindings hashes function args 1`] = `
Fr {
  "value": 13996743905738018266242108630781062638577462300246710631149261901428707620951n,
}
`;

exports[`abis wasm bindings hashes many function args 1`] = `
Fr {
  "value": 16804033272523157589767471380636512145209952615040911136576970210467728941631n,
}
`;
